# vex-kernel-checker

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  GITHUB_PUBLICATION.md  LICENSE  Makefile  PRODUCTION_ENHANCEMENTS.md  PROJECT_SUMMARY.md  README.md  RECENT_UPDATES.md  REPOSITORY_MIGRATION.md  SECURITY.md  WORKSPACE_INTEGRATION.md  dependency-track-vex.json  log-9.2.0-imx8.txt  pyproject.toml  pytest.ini  requirements.txt  setup.py  vex-kernel-checker.py
docs/: AI_ASSISTANT.md  AI_IMPLEMENTATION_SUMMARY.md  BOT_DETECTION.md  CYCLONEDX_COMPLIANCE_UPDATE.md  FINAL_IMPLEMENTATION_SUMMARY.md  PROJECT_SUMMARY.md  README.md  REFACTORING_COMPLETE.md  TESTING.md  TEST_MATERIALS_UPDATE.md  WORKSPACE_INTEGRATION.md
examples/: AI_DEMO_README.md  README.md  ai_demo.py  config-examples-README.md  final_test_output.json  production-config.ini  sample-config.ini  sample-config.json  test.json  test_brand_new_vex.json  test_cache_demo.json  test_cache_stress.json  test_config_analysis.json  test_config_analysis_work.json  test_current_output.json  test_cve_with_patches.json  test_demo.config  test_enum_output.json  test_existing_analysis.json  test_existing_analysis_work.json  test_fresh_nvd_call.json  test_fresh_vex.json  test_github_conversion_vex.json  test_github_priority.json  test_kernel_cve.json  test_known_cve.json  test_large_parallel_vex.json  test_mixed_kernel_nonkernel.json  test_mixed_vex.json  test_no_errors.json  test_no_patch_check.json  test_nvd_no_api_key.json  test_output.json  test_parallel_vex.json  test_proper_vex.json  test_real_cve.json  test_small_vex.json  test_vex.json  test_with_nvd.json  test_with_nvd_small.json
scripts/: architecture_demo.py  debug_config.py  fix_test_materials.py  implementation_summary.py  patch_architecture_summary.py  release.sh  setup.sh  simple_demo.py  validate_arch.py
tests/: README.md  benchmark.py  run_tests.py  test_arch_detection.py  test_arch_simple.py  test_architecture_manager.py  test_base.py  test_common.py  test_config_analyzer.py  test_config_file.py  test_cve_manager.py  test_enterprise_features.py  test_error_handling.py  test_eta_feature.py  test_filesystem_analysis.py  test_filtering_demo.py  test_final_validation.py  test_fresh_functionality.py  test_fresh_quick.py  test_fs_multi.json  test_github_priority_logic.py  test_graphics_cve.json  test_integration.py  test_kernel_filtering.py  test_kernel_org_to_github.py  test_minimal_error_handling.py  test_mixed_fs.config  test_nfs_cve.json  test_no_nfs.config  test_no_smb.config  test_nvd_api_behavior.py  test_patch_fetching.py  test_patch_functionality.py  test_patch_manager.py  test_patch_url_flow.py  test_progress_tracking.py  test_real_cve_github.py  test_real_github_conversion.py  test_real_scenario.py  test_regex.py  (+8 more)
vex_kernel_checker/: __init__.py  __main__.py  ai_assistant.py  base.py  cli.py  (+10 more)
(+19 files in other folders)
